--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "repository" : {
         "type" : "git",
-        "url" : "http://github.com/substack/node-multimeter.git"
+        "url" : "https://github.com/hjespers/node-multimeter.git"
     },
     "keywords" : [
         "progress",
