--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name" : "multimeter",
-    "version" : "0.1.1",
+    "name" : "multimeter-hj",
+    "version" : "0.1.2",
     "description" : "render multiple progress bars at once on the terminal",
     "main" : "index.js",
     "directories" : {
